For dependencies to work with "npm link", they must have @babel/runtime in their dev dependencies

--- a/child/package.json
+++ b/child/package.json
@@ -10,5 +10,8 @@
     "src"
   ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/runtime": "^7.1.2"
+  }
 }
