--- a/parent/package.json
+++ b/parent/package.json
@@ -18,22 +18,28 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.1.2",
     "babel-loader": "^8.0.4",
-    "babel-preset-es2015": "^6.24.1",
     "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^1.0.0",
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "cody-test-child-lazy-module": "1.0.1",
-    "cody-test-child-module": "1.0.3",
-    "lodash": "^4.17.11"
+    "cody-test-child-module": "^1.0.7",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "pretty-ms": "^4.0.0",
+    "react": ">= 16.0.0",
+    "react-datepicker": "^1.7.0",
+    "react-dom": "^16.6.0"
   }
 }
